2007-01-14  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/fvwm.1.in (IconifyWindowGroups):
	Correctly document that windows are iconified together if the are in
	the same window group, not if the group leader is iconified.

2007-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/add_window.c (GetWindowSizeHints):
	* libs/vpacket.h (ConfigWinPacket):
	* fvwm/module_interface.c (CONFIGARGS):
	* fvwm/fvwm.h (FvwmWindow):
	add orig_hints_width_inc and orig_hints_height_inc values to store the
	original resize inc  for use in FvwmIdent

	* fvwm/fvwm.1.in:
	* fvwm/style.c (style_parse_one_style_option):
	deprecated some "No..." styles
	(style_parse_one_style_option):
	add a NoResizeHintOverride style

	* fvwm/add_window.c (GetWindowSizeHints):
	only ignore the min_width/min_height/max_width/max_height with the
	ResizeHintOverride style

	* fvwm/icons.c (DeIconify):
	corrected previous fix

	* fvwm/placement.c (CleverPlacement):
	(SmartPlacement):
	(__place_get_wm_pos):
	(__place_get_nowm_pos):
	(__place_window):
	fixed smart placement
	unified placement func interface

2007-01-14  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/icons.c (DeIconify):
	don't loop forever.

	* fvwm/stack.c (is_transient_subtree_stacked_straight):
	fix detection of non needed lower operations
	(__restack_window):
	BroadcastRestack to modules even if non is done. (To cancel effect of
	already sent M_RAISE/M_LOWER)
	don't do raise hacks if no restack was done.

	* fvwm/fvwm.h (FvwmWindow):
	icon_nalloc_pixels is int instead of unsined int

	* libs/PictureUtils.h (PictureCloseImageColorAllocator):
	* libs/PictureUtils.c (PictureCloseImageColorAllocator):
	use int instead of unsigned int.

	* fvwm/menugeometry.c (menu_get_geometry)
	(menu_get_outer_geometry):
	* fvwm/focus.c (CMD_WarpToWindow):
	* fvwm/geometry.c (get_title_button_geometry):
	* fvwm/session.c (SaveWindowStates):
	* fvwm/conditional.c (CMD_WindowId):